<resources>
    <string name="app_name">Gimme</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="facebook_application_id" translatable="false">1833611576703588</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_button_text">Don\'t have an account? <u>Sign Up</u></string>
    <string name="phone_verfication_text">A Verification Code will be sent to the given Phone Number</string>
    <string name="login_with_phone">Login With Phone</string>
    <string name="channel_name">Money Request</string>
    <string name="banner_ad_unit_id">ca-app-pub-3085607779570484/2826426787</string>
    <string name="version">Version</string>
    <string name="write_an_email">Write an email</string>
    <string name="pranjal">Pranjal Gupta</string>
    <string name="divyanshu">Divyanshu Shukla</string>
    <string name="fork_on_github_link">https://github.com/pranjalg2308/Gimme</string>
    <string name="pranjal_github_link">https://github.com/pranjalg2308</string>
    <string name="divyanshu_github_link">https://github.com/Divyanshu2132</string>
</resources>
