<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".About">

    <android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#FF424242"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="#e1e1e1"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icon_info"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="#e1e1e1"
                    app:srcCompat="@drawable/ic_about"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#e1e1e1" />

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#e1e1e1"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/fork_on_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icon_github"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="#e1e1e1"
                    app:srcCompat="@drawable/ic_github_circle_white_24dp"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="Fork On Github"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#e1e1e1" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#FF424242"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="Developers"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#e1e1e1" />

            <LinearLayout
                android:id="@+id/pranjal_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="#e1e1e1"
                    app:srcCompat="@drawable/ic_person"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pranjal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#e1e1e1" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/divyanshu_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="#e1e1e1"
                    app:srcCompat="@drawable/ic_person"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divyanshu"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#e1e1e1" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/write_an_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/icon_email"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="#e1e1e1"

                    app:srcCompat="@drawable/ic_email"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/write_an_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#e1e1e1" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>